<resources>
    <string-array name="search_spinner_array">
        <item>Books</item>
        <item>Users</item>
    </string-array>

    <string name="app_name">CMPUT301F20T18</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_select_location">Empty For Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mybooks_header">My Books</string>
    <string name="mybooks_add_book">New Book</string>
    <string name="mybooks_available">Available</string>
    <string name="mybooks_pending">Pending pick up</string>
    <string name="mybooks_lending">Lending</string>
    <string name="search_available">Available</string>
    <string name="search_show_all">Show All</string>
    <string name="borrowed_header">Borrowed</string>
    <string name="borrowed_requested">Requested</string>
    <string name="borrowed_pending">Ready to pick up</string>
    <string name="borrowed_borrowing">Borrowing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_requests_header">Requests</string>
    <string name="choose_location_header">Choose location</string>
    <string name="picking_up">picking up\u0020</string>
    <string name="borrowing">borrowing\u0020</string>
    <string name="owner">owner\u0020</string>
    <string name="edit_profile"><u>Edit Account</u></string>
    <string name="my_account_header">My Account</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="email_label">Email</string>
    <string name="scan_button">Scan</string>
    <string name="search_book">Enter title, author, ISBN, or year</string>
    <string name="no_results">No results</string>
    <string name="mybooks_available_empty">Hit \"Add book\" to start lending books!</string>
    <string name="mybooks_pending_empty">You have no books pending pick up</string>
    <string name="mybooks_lending_empty">You are not lending any books</string>
    <string name="borrowed_requested_empty">Books you request will appear here</string>
    <string name="borrowed_pending_empty">Books you need to pick up will appear here</string>
    <string name="borrowed_borrowing_empty">Books you are borrowing will appear here</string>
    <string name="select_an_address">Select an address</string>
    <string name="title_activity_show_map_location">Map</string>
    <string name="mybooks_empy">No owned books found</string>
    <string name="borrowed_empty">No borrowed books found</string>
    <string name="email">Email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_question">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="change_password"><u>Change password</u></string>
    <string name="requests_empty">This book has no requests!</string>
    <string name="location_empty">Hit \"Add New Location\" to set the pick up location!</string>
    <string name="notifications_empty">You have no notifications</string>

</resources>