<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sign_in_background">

    <TextView
        android:id="@+id/text_welcome_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="36dp"

        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorAccent"
        android:textSize="32dp"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome_to"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/project_logo" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintBottom_toTopOf="@id/frame_background"
        app:srcCompat="@drawable/welcome_image" />

    <FrameLayout
        android:id="@+id/frame_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_register_background"
        android:padding="10dp"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingTop="10dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/colorOrange"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/hinted_input"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingTop="15dp"
                android:text="@string/password"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20dp"
                android:textColor="@color/colorOrange"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:background="@drawable/hinted_input"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/login"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:background="@drawable/good_button_blue"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="22dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_in_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_question"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/colorLightGray"/>

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOrange"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginStart="8dp"
                    android:textSize="18dp" />


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>